Fixed scroll bar on header image at different screen zooms
I had to remove overflow:auto on the h1 because the text would appear
wider than the container on some screens causing a scrollbar.

--- a/htdocs/ui/styles/responsive/screen.css
+++ b/htdocs/ui/styles/responsive/screen.css
@@ -444,7 +444,6 @@ hr {margin-bottom: 10px;}
 		margin-top: 15px;
 		letter-spacing: 3px;
 		max-width: 75%;
-		overflow: auto;
 	}
 
 	#content #pic {
